--- a/client/src/components/DogDetail/DogDetail.css
+++ b/client/src/components/DogDetail/DogDetail.css
@@ -33,12 +33,20 @@
 }
 
 .button {
-    font-family: 'Bebas Neue', cursive;
+
+    font-family: 'Press Start 2P';
+    padding: 10px;
+    margin: 20px;
+    border-radius: 30px;
+    border: none;
+    background-color: rgb(111, 207, 236);;
+
+    /* font-family: 'Bebas Neue', cursive;
       color: rgb(79, 82, 255);
       font-size: 120%;
       border: solid 1px rgb(202, 202, 202);
       border-radius:20px;
-      background:none;
+      background:none; */
   }
   
   .button:hover {
