--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,4 +1,21 @@
+
 .cardContainer {
     display: inline-flex;
     flex-wrap: wrap;
+}
+.load {
+    margin-top: 250px;
+    margin-left: 650px;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    animation-duration: 0s;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
