--- a/client/src/components/Pagination/Paginado.css
+++ b/client/src/components/Pagination/Paginado.css
@@ -10,7 +10,7 @@
 }
 
 .paginado button{
-    background: none;
+    background: rgb(44, 178, 231);
     border: none;
     color: white;
     font-size: 18px;
