--- a/client/src/components/DogCreate/DogCreate.css
+++ b/client/src/components/DogCreate/DogCreate.css
@@ -4,17 +4,12 @@
     border: 1px solid rgb(105, 129, 0);
     border-radius: 20px;
     width: 650px;
-    background-color: rgba(255, 255, 255, 0.088);
+    background-color: rgb(111, 207, 236);
     padding: 5px;
     margin-bottom: 120px;
     box-shadow: 2px 2px 40px rgba(0, 0, 159, 0.68);
     margin-left: 360px;
 }
-
-/* .divdiv{
-    display: flex;
-    align-content: space-around;
-} */
 
 .divTitles{
     display: flex;
@@ -55,7 +50,8 @@
 .temperament-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    text-align: justify;
+    
 }
 
 .perro{
