--- a/client/src/components/DogCreate/DogCreate.css
+++ b/client/src/components/DogCreate/DogCreate.css
@@ -87,3 +87,11 @@
     margin: 5px;
 }
 
+.app {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .dropdown-container {
+    width: 300px;
+  }
