--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -1,21 +1,22 @@
 
 .myButton{
       position: absolute;
-      left:82%;
-      top:80%;
+      left:45%;
+      top:45%;
  }
 
 .MyImage button {
     font-family: 'Press Start 2P';
+    font-size: x-large;
     height: 60px;
     width: 180px;
     border-radius: 5px;
-    border: 3px solid orangered;
-    background-color: chartreuse;
-    background: linear-gradient(90deg,chartreuse 10%, #fff 100%);
+    border: 3px solid rgba(63, 16, 173, 0.336);
+    background-color: rgb(146, 227, 241);
+    background: linear-gradient(90deg,rgb(160, 188, 241) 10%, #fff 100%);
 }
 .MyImage {
-    background-image: url(../../Img/apolloDog.jpg);
+    background-image: url(../../Img/perrosPage.jpg);
     background-position: center center;
     height: 100vh;
     background-attachment: fixed;
