--- a/client/src/components/About/about.css
+++ b/client/src/components/About/about.css
@@ -5,20 +5,39 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 3px solid rgb(105, 129, 0);
+    border: 3px solid rgb(26, 4, 124);
     border-radius: 20px;
     height: 200px;
     width: 250px;
     background-color: rgba(255, 255, 255, 0.088);
     padding: 12px;
-    margin-top: 100px;
-    margin-bottom: 160px;
+    margin-top: 150px;
+    margin-bottom: 100px;
     box-shadow: 2px 2px 40px rgba(0, 0, 159, 0.68);
-    margin-left: 530px;
+    margin-left: 540px;
 }
 
+.container-vacio {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 200px;
+    width: 250px;
+    padding: 12px;
+    margin-top: 150px;
+    margin-bottom: 100px;
+    margin-left: 540px;
+}
 .container-about h1 {
     font-size: larger;
     color: rgb(4, 31, 54);
     
+}
+
+.fondo {
+    background-image: url(../../Img/fondoDetalle2.jpg);
+    background-size:auto;
+    margin-bottom: 0%
+    ;
 }
