--- a/client/src/components/DogDetail/DogDetail.css
+++ b/client/src/components/DogDetail/DogDetail.css
@@ -4,11 +4,13 @@
     justify-content: center;
     flex-direction: column;
     padding-top: 130px;
+    background-image: url(../../Img/fondoDetalle2.jpg);
 }
 
 .info{
     display: flex;
     flex-direction: row;
+    font-size: large;
 }
 
 .image {
@@ -30,6 +32,10 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 120px;
+}
+
+.text {
+    font-size: xx-large;
 }
 
 .button {
