--- a/client/src/components/DogCreate/DogCreate.css
+++ b/client/src/components/DogCreate/DogCreate.css
@@ -11,6 +11,11 @@
     margin-left: 360px;
 }
 
+.container-dog {
+    height: 100vh;
+    background-image: url(../../Img/fondoDetalle2.jpg);
+
+}
 .divTitles{
     display: flex;
     flex-direction: row;
@@ -39,8 +44,6 @@
     justify-content: space-evenly;
     align-items: center;
     width: 650px;
-    margin-top: 30px;
-    margin-bottom: 30px;
 }
 
 .tempdivs{
@@ -91,10 +94,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: darkcyan;
+    background-color: rgb(82, 158, 219);
   }
 
 .dropdown-container {
     width: 300px;
-    background-color: darkcyan;
+    background-color: rgb(82, 158, 219);
  }
