--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -2,12 +2,9 @@
 .cardContainer {
     display: inline-flex;
     flex-wrap: wrap;
-    
 }
 .load {
-    margin-top: 250px;
-    margin-left: 650px;
-    border: 16px solid #f3f3f3; /* Light grey */
+    border: 16px solid #3142df; /* Light grey */
     border-top: 16px solid #3498db; /* Blue */
     border-radius: 50%;
     width: 120px;
@@ -20,4 +17,12 @@
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+.MyPage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: url(../../Img/fondoDetalle2.jpg);
 }
